fix: align titles

--- a/assets/sass/modules/_consent.scss
+++ b/assets/sass/modules/_consent.scss
@@ -23,6 +23,9 @@ $image-size: 30px;
     text-align: center;
     word-wrap: break-word;
     font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     span {
       padding-left: 10px;
